# CameraMotionSensor

./: .gitignore  README.md  bootselBoot
PICO_SPI_CAM/C/: CMakeLists.txt
PICO_SPI_CAM/C/Examples/MyWork/: CMakeLists.txt  MyWork.cpp
Project/C/: CMakeLists.txt
Project/C/src/Main/: CMakeLists.txt  Main.cpp
Project/Python/: requirements.txt
Project/Python/src/: listener.py
